--- a/Actors2Vec/notebooks/Word2Vec (non-NLP) for predicting movies' popularity.ipynb
+++ b/Actors2Vec/notebooks/Word2Vec (non-NLP) for predicting movies' popularity.ipynb
@@ -877,11 +877,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#PATH = Path('...')\n",
+    "PATH = Path('...')\n",
     "class Saver(): pass\n",
     "wtv = Word2Vec.load(str(PATH / 'w2v_new/epoch_10'))"
    ]
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
     "    name = get_name(id)\n",
     "    picture = get_image(id)\n",
     "    return f\"\"\"\n",
-    "    <div style=\"width: 150px; text-align: center\">\n",
+    "    <div style=\"width: 50px; text-align: center\">\n",
     "        <h4 style='margin-top: -5px'>{name}</h4>\n",
     "        <div style='font-size:75%; margin-bottom: 5px'>{id}</div>\n",
     "        <a href=\"https://www.imdb.com/name/{id}\" target=\"_blank\">\n",
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,12 +957,12 @@
     "            for p in renders\n",
     "        ]\n",
     "        )\n",
-    "    display(HTML(f'<div style=\"width: 1800px\">{carousel}</div>'))"
+    "    display(HTML(f'<div style=\"width: 1300px\">{carousel}</div>'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,14 +990,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Leonardo DiCaprio</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm0000138</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm0000138\" target=\"_blank\">\n",
@@ -1016,8 +1016,8 @@
     {
      "data": {
       "text/html": [
-       "<div style=\"width: 1800px\"><div style=\"margin-left: 10px; float: left\">\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "<div style=\"width: 1300px\"><div style=\"margin-left: 10px; float: left\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Angelina Jolie</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm0001401</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm0001401\" target=\"_blank\">\n",
@@ -1025,7 +1025,7 @@
        "        </a>\n",
        "    </div>\n",
        "    </div><div style=\"margin-left: 10px; float: left\">\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Brad Pitt</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm0000093</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm0000093\" target=\"_blank\">\n",
@@ -1033,7 +1033,7 @@
        "        </a>\n",
        "    </div>\n",
        "    </div><div style=\"margin-left: 10px; float: left\">\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Jennifer Connelly</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm0000124</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm0000124\" target=\"_blank\">\n",
@@ -1041,7 +1041,7 @@
        "        </a>\n",
        "    </div>\n",
        "    </div><div style=\"margin-left: 10px; float: left\">\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Matt Damon</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm0000354</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm0000354\" target=\"_blank\">\n",
@@ -1049,7 +1049,7 @@
        "        </a>\n",
        "    </div>\n",
        "    </div><div style=\"margin-left: 10px; float: left\">\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Tom Cruise</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm0000129</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm0000129\" target=\"_blank\">\n",
@@ -1057,7 +1057,7 @@
        "        </a>\n",
        "    </div>\n",
        "    </div><div style=\"margin-left: 10px; float: left\">\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Jennifer Davisson</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm2248832</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm2248832\" target=\"_blank\">\n",
@@ -1065,7 +1065,7 @@
        "        </a>\n",
        "    </div>\n",
        "    </div><div style=\"margin-left: 10px; float: left\">\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Ben Affleck</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm0000255</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm0000255\" target=\"_blank\">\n",
@@ -1073,7 +1073,7 @@
        "        </a>\n",
        "    </div>\n",
        "    </div><div style=\"margin-left: 10px; float: left\">\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Edward Norton</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm0001570</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm0001570\" target=\"_blank\">\n",
@@ -1081,7 +1081,7 @@
        "        </a>\n",
        "    </div>\n",
        "    </div><div style=\"margin-left: 10px; float: left\">\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Casey Affleck</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm0000729</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm0000729\" target=\"_blank\">\n",
@@ -1089,7 +1089,7 @@
        "        </a>\n",
        "    </div>\n",
        "    </div><div style=\"margin-left: 10px; float: left\">\n",
-       "    <div style=\"width: 150px; text-align: center\">\n",
+       "    <div style=\"width: 50px; text-align: center\">\n",
        "        <h4 style='margin-top: -5px'>Jerry Bruckheimer</h4>\n",
        "        <div style='font-size:75%; margin-bottom: 5px'>nm0000988</div>\n",
        "        <a href=\"https://www.imdb.com/name/nm0000988\" target=\"_blank\">\n",
